[project]
name = "tver-rss"
version = "0.0.1"
requires-python = "~=3.13.0"
dependencies = [
    "requests",
    "feedgenerator",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = []
# uv 本体のバージョンピン。Dependabot (uv エコシステム) がこの行を bump し、
# CI (.github/workflows/gh-pages.yaml) が setup-uv に渡す version をここから読む。
# 既定グループではないため `uv sync` で venv にはインストールされない。
ci = ["uv==0.11.15"]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
